--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=8d83053138d7afcaf73d",
+    "/css/app.css": "/css/app.css?id=366e8754c06b35aa1baf"
 }
