--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "chmod -R 777 public/"
         ]
     },
+  
     "extra": {
         "laravel": {
             "dont-discover": []
